# Cl-Eagl-

./: CMakeLists.txt  README.md  compile_commands.json  expected_output.txt  scanner_test.pl  test.lox
.cache/clangd/index/: OperatorTrie.cpp.AE922AD5783D7DB9.idx  OperatorTrie.h.167585BE0C6707EB.idx  ScanContext.h.A2DF8046054DAACC.idx  Scanner.cpp.71FA42CC7EEC2971.idx  Scanner.h.7F1C74CB808B98C6.idx  main.cpp.F6A1B7231BD03CCA.idx
src/: main.cpp
src/scanner/: OperatorTrie.cpp  OperatorTrie.h  ScanContext.h  Scanner.cpp  Scanner.h
